k8s/configs/03-evanli-users.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evanli-users
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evanli-users
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: evanli-users
    spec:
      containers:
        - image: eshurupov/evanli-users:1.0
          name: evanli-users
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: evanli-users
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8001
  selector:
    app: evanli-users
  type: ClusterIP
