k8s/configs/04-evanli-wallets.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evanli-wallets
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evanli-wallets
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: evanli-wallets
    spec:
      containers:
        - image: eshurupov/evanli-wallets:1.1
          name: evanli-wallets
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: evanli-wallets
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8002
  selector:
    app: evanli-wallets
  type: ClusterIP
