k8s/configs/05-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evanli-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /((swagger-ui|users|api/(auth|users|profile)).*)
            pathType: Prefix
            backend:
              service:
                name: evanli-users
                port:
                  number: 80
          - path: /((wallets|api/(wallets)).*)
            pathType: Prefix
            backend:
              service:
                name: evanli-wallets
                port:
                  number: 80
